--- a/portfolio.html
+++ b/portfolio.html
@@ -62,6 +62,10 @@
 	<figcaption>3 Kingz Industries Logo</figcaption>
     </div>
   
+     <div class="box4">
+        <a href="https://tramonyaluoa.github.io/NkuliProjects/"><img src="img/nkuli.png" alt="NkuliProjects"></a>
+         <figcaption>Nkuli Projects Website</a></figcaption>
+     </div>
     
 </div>
        
