--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ I have worked in different employment sectors, gaining different experiences for
        </table>
 
 
-        <p><i class="fa fa-download"> <a href="Teboho Ramonyaluoa.pdf">Please view My Resume</a></i></p>
+        <p><i class="fa fa-download"> <a href="Teboho Ramonyaluoa (1).pdf">Please view My Resume</a></i></p>
     </div>
 </div>
         
