--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ I believe my diploma in Information Technology coupled with my experience has pr
    <h1><u><b>About Me</b></u></h1>
       <div class="About">
                  <p>I was born and raised in Sebokeng - in the Vaal Region, South of Johannesburg, in the Gauteng Province, South Africa. <br />
-I am a hardworking individual who pays special attention to detail, am a fast learner; I quickly adapt to change, am inquisitive and can work well within a team and independently.<br /><br /> 
+I am a hardworking individual who pays special attention to detail, am a fast learner; I quickly adapt to change, I am inquisitive and can work well within a team and independently.<br /><br /> 
 I have a strong work ethic & strive for excellence in all which I invest my efforts, I have exceptional business acumen and have fair management qualities. <br />
 I have worked in different employment sectors, gaining different experiences for different working conditions. I work well under pressure and have superb time management skills.             
                  </p>
